added bottom navigation view

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
         app:layout_constraintBottom_toTopOf="@id/main_bottom_navigation_view"
 
         app:defaultNavHost="true"
-        app:navGraph="@navigation/nav_graph" />
+        app:navGraph="@navigation/main_navigation_graph" />
 
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
