--- a/app/src/main/res/navigation/main_navigation_graph.xml
+++ b/app/src/main/res/navigation/main_navigation_graph.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_navigation_graph"
-    app:startDestination="@id/homeFragment2">
+    app:startDestination="@id/navigation_home_fragment">
     <fragment
-        android:id="@+id/homeFragment2"
+        android:id="@+id/navigation_home_fragment"
         android:name="com.example.iotproject.HomeFragment"
         android:label="fragment_home"
         tools:layout="@layout/fragment_home" />
