added wine list

--- a/app/src/main/res/menu/main_bottom_navigation_view_menu.xml
+++ b/app/src/main/res/menu/main_bottom_navigation_view_menu.xml
@@ -11,7 +11,7 @@
         android:icon="@drawable/icon_chart" />
 
     <item
-        android:id="@+id/wine_bottle_list"
+        android:id="@+id/wines"
         android:title="Wines"
         android:icon="@drawable/icon_wine_bottle" />
 
