--- a/app/src/main/res/navigation/main_navigation_graph.xml
+++ b/app/src/main/res/navigation/main_navigation_graph.xml
@@ -14,4 +14,9 @@
         android:name="com.example.iotproject.StatsFragment"
         android:label="fragment_stats"
         tools:layout="@layout/fragment_stats" />
+    <fragment
+        android:id="@+id/navigation_wines_fragment"
+        android:name="com.example.iotproject.WineFragment"
+        android:label="fragment_wines"
+        tools:layout="@layout/item_wine_list" />
 </navigation>
