--- a/app/src/main/res/layout/fragment_wine.xml
+++ b/app/src/main/res/layout/fragment_wine.xml
@@ -5,15 +5,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <Button
+        android:id="@+id/wine_add_bottle_button"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_width="match_parent"
+        android:layout_marginHorizontal="8dp"
+        android:layout_height="wrap_content"
+        android:text="Ajouter une bouteille"/>
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/list"
+        android:id="@+id/wine_recyclerview"
         android:name="com.example.iotproject.WineFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/wine_add_bottle_button"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         app:layoutManager="LinearLayoutManager"
         tools:context=".WineFragment"
-        tools:listitem="@layout/fragment_item" />
+        tools:listitem="@layout/item_wine_list" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
